--- a/engineeringhubfrontend/src/app/pages/home-page/home-page.component.html
+++ b/engineeringhubfrontend/src/app/pages/home-page/home-page.component.html
@@ -34,11 +34,11 @@
                     Please Login or Signup to Access the Portal
                 </div>
                 <div class = "space-x-16 ">
-                    <button class = "text-xl text-white px-8 py-1 rounded-lg bg-yellow-500 inline-block">
+                    <button routerLink="/login" class = "text-xl text-white px-8 py-1 rounded-lg bg-yellow-500 inline-block">
                         Login
                     </button>
         
-                    <button class = "text-xl text-white px-8 py-1 rounded-lg bg-yellow-500 inline-block">
+                    <button routerLink="/signup" class = "text-xl text-white px-8 py-1 rounded-lg bg-yellow-500 inline-block">
                         Sign Up
                     </button>
                 </div>
