--- a/engineeringhubfrontend/src/app/share/navbar/navbar.component.html
+++ b/engineeringhubfrontend/src/app/share/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <div class = "w-100 bg-gray-800 h-16 flex items-center">
-    <img class = "ml-4" src = "../../assets/gear.svg"/>
+    <img routerLink="" class = "cursor-pointer ml-4" src = "../../assets/gear.svg"/>
     <div class = "text-white font-bold px-4">
         Mizzou Engineering Hub
     </div>
