--- a/engineeringhubfrontend/src/app/pages/profile-page/profile-page.component.html
+++ b/engineeringhubfrontend/src/app/pages/profile-page/profile-page.component.html
@@ -1,1 +1,5 @@
-<p>profile-page works!</p>
+<div class = "flex flex-col min-h-screen">
+    <div class = "w-48 flex-grow bg-yellow-500">
+
+    </div>
+</div>
