--- a/engineeringhubfrontend/src/app/pages/login-page/login-page.component.html
+++ b/engineeringhubfrontend/src/app/pages/login-page/login-page.component.html
@@ -1,26 +1,32 @@
-<div class = "mx-auto md:container my-10">
-    <form (ngSubmit)="onSubmit()" [formGroup]="loginForm" class = "mx-10 space-y-4">
-        <div class = "flex items-center space-x-4">
-            <div class = "w-24">
-                <label class = "flex-initial text-lg">Username: </label>    
-            </div>
-            <input formControlName="username" class = "flex-grow rounded-full" type="text"/>
-        </div>
-        
-        <div class = "flex items-center space-x-4">
-            <div class = "w-24">
-                <label class = "flex-initial text-lg">Password: </label>    
-            </div>
-            
-            <input formControlName="password" class = "flex-grow rounded-full" type="password"/>
-        </div>
+<div class = "flex flex-col min-h-screen">
+    <Navbar></Navbar>
+    <div class = "flex-grow">                                
+        <div class = "mx-auto md:container my-10">
+            <form (ngSubmit)="onSubmit()" [formGroup]="loginForm" class = "mx-10 space-y-4">
+                <div class = "flex items-center space-x-4">
+                    <div class = "w-24">
+                        <label class = "flex-initial text-lg">Username: </label>    
+                    </div>
+                    <input formControlName="username" class = "flex-grow rounded-full" type="text"/>
+                </div>
+                
+                <div class = "flex items-center space-x-4">
+                    <div class = "w-24">
+                        <label class = "flex-initial text-lg">Password: </label>    
+                    </div>
+                    
+                    <input formControlName="password" class = "flex-grow rounded-full" type="password"/>
+                </div>
 
-        <button [ngClass] = "{
-            'cursor-default': !loginForm.valid,
-            'bg-gray-400': !loginForm.valid,
-            'bg-gray-800': loginForm.valid
-        }" [disabled] = "!loginForm.valid" class = "float-right bg-gray-400 text-white px-4 py-2 rounded-full">
-            Submit
-        </button>
-    </form>
+                <button [ngClass] = "{
+                    'cursor-default': !loginForm.valid,
+                    'bg-gray-400': !loginForm.valid,
+                    'bg-gray-800': loginForm.valid
+                }" [disabled] = "!loginForm.valid" class = "float-right bg-gray-400 text-white px-4 py-2 rounded-full">
+                    Submit
+                </button>
+            </form>
+        </div>
+    </div>
+    <Footer></Footer>
 </div>
