--- a/engineeringhubfrontend/src/app/pages/profile-page/profile-page.component.html
+++ b/engineeringhubfrontend/src/app/pages/profile-page/profile-page.component.html
@@ -1,5 +1,11 @@
 <div class = "flex flex-col min-h-screen">
-    <div class = "w-48 flex-grow bg-yellow-500">
-
+    <Navbar></Navbar>                                                        
+    <div class = "flex flex-grow flex-col h-full">
+        <div class = "px-4 pt-10 text-2xl flex-grow w-48 bg-yellow-500 text-white">
+            Welcome {{authenticatedUser != undefined ? authenticatedUser.username : ""}}
+        </div>
     </div>
+    <Footer></Footer>
 </div>
+
+
