refactored header and footer into shared content-project component

--- a/engineeringhubfrontend/src/app/pages/home-page/home-page.component.html
+++ b/engineeringhubfrontend/src/app/pages/home-page/home-page.component.html
@@ -1,5 +1,4 @@
-<div class = "flex flex-col min-h-screen">
-    <Navbar></Navbar>
+<DefaultPageLayout>
     <div class = "flex-grow">                
         <div>
             <div class = "bg-yellow-500 py-10 w-full">
@@ -106,5 +105,4 @@
             </div>
         </div>
     </div>
-    <Footer></Footer>
-</div>
+</DefaultPageLayout>
