--- a/engineeringhubfrontend/src/app/pages/login-page/login-page.component.html
+++ b/engineeringhubfrontend/src/app/pages/login-page/login-page.component.html
@@ -1,5 +1,4 @@
-<div class = "flex flex-col min-h-screen">
-    <Navbar></Navbar>
+<DefaultPageLayout>
     <div class = "flex-grow">                                
         <div class = "mx-auto md:container my-10">
             <form (ngSubmit)="onSubmit()" [formGroup]="loginForm" class = "mx-10 space-y-4">
@@ -28,5 +27,4 @@
             </form>
         </div>
     </div>
-    <Footer></Footer>
-</div>
+</DefaultPageLayout>
