--- a/engineeringhubfrontend/src/app/pages/sign-up-page/sign-up-page.component.html
+++ b/engineeringhubfrontend/src/app/pages/sign-up-page/sign-up-page.component.html
@@ -1,5 +1,4 @@
-<div class = "flex flex-col min-h-screen">
-    <Navbar></Navbar>
+<DefaultPageLayout>
     <div class = "flex-grow">                                                
         <div class = "mx-auto md:container my-10">
             <form (ngSubmit)="onSubmit()" [formGroup]="signUpForm" class = "mx-10 space-y-4">
@@ -36,6 +35,4 @@
             </form>
         </div>
     </div>
-    <Footer></Footer>
-</div>
-
+</DefaultPageLayout>
