--- a/engineeringhubfrontend/src/app/pages/home-page/home-page.component.html
+++ b/engineeringhubfrontend/src/app/pages/home-page/home-page.component.html
@@ -1,7 +1,7 @@
 <DefaultPageLayout>
     <div class = "flex-grow">                
         <div>
-            <div class = "bg-yellow-500 py-10 w-full">
+            <div class = "bg-mizzou-gold py-10 w-full">
                 <div class="space-x-4 text-center">
                     <img class = "inline-block" src = "../../assets/column.svg"/>
                     <img class = "inline-block" src = "../../assets/column.svg"/>
@@ -11,7 +11,7 @@
                     <img class = "inline-block" src = "../../assets/column.svg"/>
                 </div>
             </div>
-            <div class = "bg-gray-800 h-5 w-full"></div>
+            <div class = "bg-mizzou-black h-5 w-full"></div>
             
             <div class = "w-full flex">
                 <div class = "flex-1">
@@ -36,11 +36,11 @@
                             Please Login or Signup to Access the Portal
                         </div>
                         <div class = "space-x-16 ">
-                            <button routerLink="/login" class = "text-xl text-white px-8 py-1 rounded-lg bg-yellow-500 inline-block">
+                            <button routerLink="/login" class = "home-button">
                                 Login
                             </button>
                 
-                            <button routerLink="/signup" class = "text-xl text-white px-8 py-1 rounded-lg bg-yellow-500 inline-block">
+                            <button routerLink="/signup" class = "home-button">
                                 Sign Up
                             </button>
                         </div>
@@ -71,7 +71,7 @@
                         <br>
                         Mizzou Engineering Hub is ...
                     </div>
-                    <div class = "mx-auto my-4 w-48 h-1 bg-gray-500">
+                    <div class = "mx-auto my-4 w-48 h-1 bg-mizzou-gray">
 
                     </div>
 
@@ -80,26 +80,26 @@
                         <div class = "col-span-1 w-full">
                             <img class = "transform scale-75 mx-auto" src = "../../assets/icons/message.svg"/>
                             <div class = "text-2xl">
-                                A place to <span class = "font-bold text-yellow-500">collaborate</span>
+                                A place to <span class = "text-highlight">collaborate</span>
                             </div>
                         </div>
                         <div class = "col-span-1 w-full">
                             <img class = "transform scale-75 mx-auto" src = "../../assets/icons/handiwork.svg"/>
                             <div class = "text-2xl">
-                                A place to <span class = "font-bold text-yellow-500">build</span>
+                                A place to <span class = "text-highlight">build</span>
                             </div>
                         </div>
                         <div class = "col-span-1 w-full">
                             <img class = "transform scale-75 mx-auto" src = "../../assets/icons/share.svg"/>
                             <div class = "text-2xl">
-                                A place to <span class = "font-bold text-yellow-500">share</span>
+                                A place to <span class = "text-highlight">share</span>
                             </div>
                         </div>
                     </div>
 
                     <!-- Projects and Ideas -->
                     <div class = "mt-14 text-3xl">
-                        <span class = "font-bold text-yellow-500">Projects</span> and <span class = "font-bold text-yellow-500">Ideas</span>
+                        <span class = "text-highlight">Projects</span> and <span class = "text-highlight">Ideas</span>
                     </div>
                 </div>
             </div>
