--- a/engineeringhubfrontend/src/app/share/footer/footer.component.html
+++ b/engineeringhubfrontend/src/app/share/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class = "w-full bg-gray-800 h-16 flex items-center">
+<div class = "w-full bg-mizzou-black h-16 flex items-center">
     <div class = "w-full text-white font-bold px-4 text-center">
         Developed by Michael Navazhylau, 2021
     </div>
