--- a/engineeringhubfrontend/src/app/share/navbar/navbar.component.html
+++ b/engineeringhubfrontend/src/app/share/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<div class = "w-100 bg-gray-800 h-16 flex items-center">
+<div class = "w-100 bg-mizzou-black h-16 flex items-center">
     <img routerLink="" class = "cursor-pointer ml-4" src = "../../assets/gear.svg"/>
     <div class = "text-white font-bold px-4">
         Mizzou Engineering Hub
