--- a/engineeringhubfrontend/src/app/pages/profile-page/profile-page.component.html
+++ b/engineeringhubfrontend/src/app/pages/profile-page/profile-page.component.html
@@ -1,7 +1,7 @@
 <DefaultPageLayout>
     <div class = "flex flex-grow flex-col h-full">
-        <div class = "flex-grow w-52 bg-yellow-500 ">
-            <div class = "pt-10 text-center text-2xl text-white">
+        <div class = "flex-grow w-52 bg-mizzou-gold">
+            <div class = "pt-10 text-center text-2xl text-black">
                 Welcome {{authenticatedUser != undefined ? authenticatedUser.username : ""}}
             </div>
             <div class = "mt-10">
