--- a/engineeringhubfrontend/src/app/pages/profile-page/profile-page.component.scss
+++ b/engineeringhubfrontend/src/app/pages/profile-page/profile-page.component.scss
@@ -1,3 +1,3 @@
 .menu-row {
-    @apply text-xl font-bold text-white text-center py-4 border-black border-b-4 hover:cursor-pointer hover:bg-yellow-600;
+    @apply text-xl text-black text-center py-4 border-black border-b-4 hover:cursor-pointer hover:bg-mizzou-orange;
 }
