scaffolded project page

--- a/engineeringhubfrontend/src/app/pages/profile-page/profile-page.component.html
+++ b/engineeringhubfrontend/src/app/pages/profile-page/profile-page.component.html
@@ -8,7 +8,7 @@
                     <div class = "px-2 text-xl">Major: </div>
                 </div>
                 <div class = "mt-10">
-                    <div class = "menu-row border-t-4">
+                    <div (click)="navigateToProjects()" class = "menu-row border-t-4">
                         My Projects
                     </div>
                     <div class = "menu-row">
