--- a/engineeringhubfrontend/src/app/pages/profile-page/profile-page.component.html
+++ b/engineeringhubfrontend/src/app/pages/profile-page/profile-page.component.html
@@ -1,7 +1,7 @@
 <DefaultPageLayout>
     <div class = "flex flex-grow h-full">
         <div class = "flex flex-col">
-            <div class = "flex-grow w-52 bg-mizzou-gold">
+            <div class = "border-r-2 border-black flex-grow w-52 bg-mizzou-gold">
                 <div class = "pt-10 text-black">
                     <div class = "px-1 text-center mb-2 text-2xl">Welcome {{authenticatedUser != undefined ? authenticatedUser.username : ""}}</div>
                     <div class = "px-2 text-xl">College: {{authenticatedUser != undefined ? authenticatedUser.colleges[0].name : ""}}</div>
