--- a/engineeringhubfrontend/src/app/pages/project-page/project-page.component.html
+++ b/engineeringhubfrontend/src/app/pages/project-page/project-page.component.html
@@ -7,6 +7,26 @@
                 <a class = "hover:underline text-mizzou-orange" href="#" [routerLink]="'/profile'">Go back</a>
             </div>
         </div>
+
+        <!-- Search bar -->
+        <form class = "flex mx-8 mt-4">
+            <input class = "flex-grow rounded-full" type = "text"/>
+            <button class = "ml-8 mr-2 bg-mizzou-gold hover:bg-mizzou-orange rounded-full px-2 py-1 text-white">
+                Search
+            </button>
+        </form>
+
+
+        <!-- Project Options -->
+        <div class = "mx-8 mt-4 ml-auto">
+            <button class = "bg-mizzou-black hover:ring-2 ring-mizzou-gold rounded-full px-4 py-1 mx-2 text-white">
+                + New Project Proposal
+            </button>
+            <button class = "bg-mizzou-black hover:ring-2 ring-mizzou-gold rounded-full px-4 py-1 mx-2 text-white">
+                + New Project
+            </button>
+        </div>
+
         <div class="mt-4 mx-8 mb-4 space-y-4">
             <div *ngFor = "let projectResult of ToProjectCardResults(userProjectList)">
                 <ResultCard 
