added embed video to home page

--- a/engineeringhubfrontend/src/app/pages/home-page/home-page.component.html
+++ b/engineeringhubfrontend/src/app/pages/home-page/home-page.component.html
@@ -11,6 +11,11 @@
                     <img class = "inline-block" src = "../../assets/column.svg"/>
                 </div>
             </div>
+
+            <div class = "bg-mizzou-black h-5 w-full"></div>
+            <div class = "my-8">
+                <iframe class="ring-8 ring-mizzou-gold mx-auto block" width="699" height="393" src="https://www.youtube.com/embed/Sl2uK3IMrgs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
             <div class = "bg-mizzou-black h-5 w-full"></div>
             
             <div class = "w-full flex">
