added trigram similarity

--- a/engineeringhubfrontend/src/app/share/main-search/main-search.component.html
+++ b/engineeringhubfrontend/src/app/share/main-search/main-search.component.html
@@ -3,6 +3,8 @@
         <select formControlName="searchFilter" class = "rounded-full mb-2">
             <option selected value="projects">Projects</option>
             
+            <option value = "project-proposals">Project Proposals</option>
+
             <option value="users">Users</option>
             
             <option value="groups">Groups</option>
