--- a/engineeringhubfrontend/src/app/share/main-search/main-search.component.html
+++ b/engineeringhubfrontend/src/app/share/main-search/main-search.component.html
@@ -23,6 +23,7 @@
     <div class="mt-4 mb-4 space-y-4">
         <div *ngFor = "let result of searchResults">
             <ResultCard 
+            [genericName]="result.genericName"
             [cardType]="result.type" 
             [projectAttributes]="result.attributes" 
             [projectName]="result.name" 
