--- a/engineeringhubfrontend/src/app/share/result-card/result-card.component.html
+++ b/engineeringhubfrontend/src/app/share/result-card/result-card.component.html
@@ -1,5 +1,5 @@
 <div class = "p-4 w-full shadow-xl border-2 rounded-2xl ">
-    <ng-container *ngIf = "cardType == 0">
+    <ng-container *ngIf = "cardType == 0 || cardType == 1">
         <div class = "text-2xl">
             {{projectName}}
         </div>
@@ -20,7 +20,7 @@
         </div>
     </ng-container>
     
-    <ng-container *ngIf = "cardType != 0">
+    <ng-container *ngIf = "cardType > 1">
         <div class="flex items-center w-full">
         
             <div class = "w-20 h-20 rounded-full bg-mizzou-gold">
