--- a/engineeringhubfrontend/src/app/pages/project-page/project-page.component.html
+++ b/engineeringhubfrontend/src/app/pages/project-page/project-page.component.html
@@ -30,6 +30,8 @@
         <div class="mt-4 mx-8 mb-4 space-y-4">
             <div *ngFor = "let projectResult of ToProjectCardResults(userProjectList)">
                 <ResultCard 
+                (viewCardEvent)="ViewProject($event)"
+                [extraMetaData]="projectResult.id"
                 [cardType]="projectCardType" 
                 [projectAttributes]="projectResult.attributes" 
                 [projectName]="projectResult.name" 
