--- a/engineeringhubfrontend/src/app/pages/view-project-page/view-project-page.component.html
+++ b/engineeringhubfrontend/src/app/pages/view-project-page/view-project-page.component.html
@@ -47,7 +47,7 @@
         <div class = "text-2xl font-bold text-center">
             Project Notes
         </div>
-        <button class = "mx-8 ml-auto fit-content text-white rounded-full px-2 py-1 hover:bg-mizzou-orange bg-mizzou-gold">
+        <button (click)="createProjectNote()" class = "mx-8 ml-auto fit-content text-white rounded-full px-2 py-1 hover:bg-mizzou-orange bg-mizzou-gold">
             + Add Project Note
         </button>
 
