--- a/engineeringhubfrontend/src/app/pages/project-page/project-page.component.html
+++ b/engineeringhubfrontend/src/app/pages/project-page/project-page.component.html
@@ -19,10 +19,10 @@
 
         <!-- Project Options -->
         <div class = "mx-8 mt-4 ml-auto">
-            <button class = "bg-mizzou-black hover:ring-2 ring-mizzou-gold rounded-full px-4 py-1 mx-2 text-white">
+            <button (click)="createNewProjectProposal()" class = "bg-mizzou-black hover:ring-2 ring-mizzou-gold rounded-full px-4 py-1 mx-2 text-white">
                 + New Project Proposal
             </button>
-            <button class = "bg-mizzou-black hover:ring-2 ring-mizzou-gold rounded-full px-4 py-1 mx-2 text-white">
+            <button (click)="createNewProject()" class = "bg-mizzou-black hover:ring-2 ring-mizzou-gold rounded-full px-4 py-1 mx-2 text-white">
                 + New Project
             </button>
         </div>
@@ -30,7 +30,10 @@
         <div class="mt-4 mx-8 mb-4 space-y-4">
             <div *ngFor = "let projectResult of ToProjectCardResults(userProjectList)">
                 <ResultCard 
+                [edittable] = "true"
                 (viewCardEvent)="ViewProject($event)"
+                (editCardEvent)="EditProject($event)"
+                (deleteCardEvent)="DeleteProject($event)"
                 [extraMetaData]="projectResult.id"
                 [cardType]="projectCardType" 
                 [projectAttributes]="projectResult.attributes" 
