--- a/engineeringhubfrontend/src/app/pages/add-project-proposal-page/add-project-proposal-page.component.html
+++ b/engineeringhubfrontend/src/app/pages/add-project-proposal-page/add-project-proposal-page.component.html
@@ -1,1 +1,39 @@
-<p>add-project-proposal-page works!</p>
+<DefaultPageLayout>
+    <div class = "flex flex-col flex-grow h-full">
+        <div class = "mx-auto">    
+            <div class = "mt-8 text-2xl text-center">
+                Creating new proposal
+                
+                <a class = "pl-4 hover:underline text-mizzou-orange" href="#" routerLink= "/projects/">Go back</a>
+            </div>
+        </div>
+
+        <div class = "mx-8">
+            <form (ngSubmit)="onSubmit()" [formGroup]="proposalForm">
+                <div>
+                    <label class="text-xl">Title</label>
+                    <br>
+                    <input formControlName="name" class="w-full" type ="text"/>
+                </div>
+
+                <div class = "mt-4">
+                    <label class="text-xl">
+                        Content
+                    </label>
+                    <br>
+                    <textarea formControlName="description" class = "w-full"></textarea>
+                </div>
+
+                <button 
+                [ngClass]="{
+                    'bg-mizzou-gray': !proposalForm.valid,
+                    'bg-mizzou-green hover:ring-4 ring-mizzou-black': proposalForm.valid  
+                }"
+                class = "float-right mt-4 w-40 py-1 px-2 text-white">
+                    <span *ngIf="!editting">Create</span>
+                    <span *ngIf="editting">Update</span>
+                </button>
+            </form>
+        </div>
+    </div>
+</DefaultPageLayout>
